# CD4ML-Scenarios

./: .gitconfig  .gitignore  Dockerfile-minio  Jenkinsfile  docker-compose.yaml  pyproject.toml  requirements.txt
cd4ml/: filenames.py
cd4ml/problems/groceries/algorithms/random_forest/: default.json
cd4ml/problems/groceries/ml_pipelines/: default.json
cd4ml/problems/houses/algorithms/random_forest/: default.json
cd4ml/problems/houses/ml_pipelines/: default.json
instructions/: 1-SystemSetup.md
scripts/: common_arg_parsers.py
