[tool.poetry]
name = "cd4ml"
version = "0.1.0"
description = "Local MLOps Stack for Full Pipeline Experimentation"
authors = ["Kyle Dunovan <kyle.dunovan@ntrepidcorp.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.4"
pandas = "^0.25.3"
scikit-learn = "^0.23.2"
flask = "^1.1.1"
mlflow = "^1.10.0"
joblib = "^0.16.0"
lime = "^0.1.1.36"
fluent-logger = "^0.9.4"
bokeh = "^1.4.0"
ipython = "^7.8.0"
arrow = "^0.15.5"
wickedhot = "^0.2.5"
boto3 = "^1.14.41"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
flake8-print = "^3.1.4"
autopep8 = "^1.5"
snakeviz = "^2.0.1"
pytest = "^5.0.1"
pytest-cov = "^2.7.1"
coverage = "^4.5.4"
ipywidgets = "^7.5.1"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
pylint = "^2.6.0"
pydantic = "^1.7.3"
jupyter = "^1.0.0"
ipykernel = "^5.4.2"
notebook = "^6.1.5"
jupyterlab = "^3.0.0"
jedi = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


